5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1800_2567.log
== TEST (2019-06-10 17:05:31) 
-- CODE:
n = int(input("Numero: "))

v = str(n)
print(v)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:06:25) 
-- CODE:
n = int(input("Numero: "))

v = str(n)
print(str(n))
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:08:45) 
-- CODE:
n = int(input("Numero: "))

i = "*
v = n * i

print(v)
-- ERROR:
File "XXXX", line 3
    i = "*
         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:08:52) 
-- CODE:
n = int(input("Numero: "))

i = "*"
v = n * i

print(v)
-- OUTPUT:
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:13:26) 
-- CODE:
n = int(input("Numero:"))

i = -1
o = "*"
while i < n:
	v = (o*n)-i
	i = i - 1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = (o*n)-i
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:14:09) 
-- CODE:
n = int(input("Numero:"))

i = -1
o = "*"
while i < n:
	v = (o * n)-i
	i = i - 1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = (o * n)-i
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:14:24) 
-- CODE:
n = int(input("Numero:"))

i = -1
o = "*"
while i < n:
	v = (o * n)-1
	i = i - 1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = (o * n)-1
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:16:57) 
-- CODE:
n = int(input("Numero:"))

i = -1
o = "*"
while i < n:
	v = (o * n)-1
	i = i - 1
	print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = (o * n)-1
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:18:52) 
-- CODE:
n = int(input("Numero:"))

i = 0
o = "*"
while i == 1:
	v = o * (n - i)
	i = i - 1
	print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v = (o * n)-1
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:19:00) 
-- CODE:
n = int(input("Numero:"))

i = 0
o = "*"
while i == 1:
	v = o * (n - i)
	i = i - 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(v)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:20:18) 
-- CODE:
n = int(input("Numero:"))

i = n
o = "*"
while i == 1:
	v = o * i
	i = i - 1
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(v)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:20:29) 
-- CODE:
n = int(input("Numero:"))

i = n
o = "*"
while i == 1:
	v = o * i
	i = i - 1
	print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(v)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:20:34) 
-- CODE:
n = int(input("Numero:"))

i = n
o = "*"
while i == 1:
	v = o * i
	i = i - 1
	print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(v)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:21:14) 
-- CODE:
n = int(input("Numero:"))

i = n
v = ""
while i == 1:
	v = "*" * i
	i = i - 1
	print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(v)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:21:46) 
-- CODE:
n = int(input("Numero:"))

v = ""
while n > 0:
	v = "*" * i
	i = i - 1
	print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = "*" * i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:21:58) 
-- CODE:
n = int(input("Numero:"))

v = ""
while n > 0:
	v = "*" * i
	print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = "*" * i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:23:06) 
-- CODE:
n = int(input("Numero:"))
i = n
v = ""
while i > 0:
	v = "*" * i
	b = i - 1
	print(v)


-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:23:30) 
-- CODE:
n = int(input("Numero:"))
i = n
v = ""
while i > 0:
	v = "*" * i
	i = i - 1
	print(v)


-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:25:48) 
-- CODE:
n = int(input("Numero:"))
i = n
v = ""
while i > 0:
	v = "*" * i
	i = i - 1
	print(v)
while i != n:
	v = "*" * i
	i = i + 1
	print(v)
-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:26:19) 
-- CODE:
n = int(input("Numero:"))
i = n
v = ""
while i > 0:
	v = "*" * i
	i = i - 1
	print(v)
while i != (n + 1):
	v = "*" * i
	i = i + 1
	print(v)
-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:26:50) 
-- CODE:
n = int(input("Numero:"))
i = n
v = ""
while i > 0:
	v = "*" * i
	i = i - 1
	print(v)
while i != (n + 1):
	v = "*" * i
	i = i + 1
	print(v)
-- EXECUTION TIME:
0.693216
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:27:52) 
-- CODE:
n = int(input("Numero:"))
i = n
v = ""
while i > 0:
	v = "*" * i
	i = i - 1
	print(v)
while i >= n:
	v = "*" * i
	i = i + 1
	print(v)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:28:12) 
-- CODE:
n = int(input("Numero:"))
i = n
v = ""
while i > 0:
	v = "*" * i
	i = i - 1
	print(v)
while i >= n:
	v = "*" * i
	i = i + 1
	print(v)
-- EXECUTION TIME:
0.700007
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:30:58) 
-- CODE:
n = int(input("Numero:"))
i = n
v = ""
while i > 0:
	v = "*" * i
	i = i - 1
	print(v)
while i >= n:
	v = "*" * i
	i = i + 1
	print(v)
-- EXECUTION TIME:
0.654978
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:31:07) 
-- CODE:
n = int(input("Numero:"))
i = n
v = ""
while i > 0:
	v = "*" * i
	i = i - 1
	print(v)
while i >= n:
	v = "*" * i
	i = i + 1
	print(v)
-- EXECUTION TIME:
0.62511
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:31:30) 
-- CODE:
n = int(input("Numero:"))
i = n
v = ""
while i > 0:
	v = "*" * i
	i = i - 1
	print(v)
while i != n + 1:
	v = "*" * i
	i = i + 1
	print(v)
-- EXECUTION TIME:
0.790584
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
